Fix too wide book covers

--- a/src/components/styles/BookCard.css
+++ b/src/components/styles/BookCard.css
@@ -3,7 +3,7 @@
   border-radius: 10px;
   border: 1px solid black;
   text-align: center;
-  padding: 5px;
+  padding: 10px;
   background-color: white;
   box-shadow: 5px 5px 2px lightgrey;
   justify-content: center;
@@ -15,7 +15,7 @@
 }
 
 .book-card-image {
-  height: 15rem;
+  max-height: 15rem;
 }
 
 .book-card-info {
